--- a/css/main.css
+++ b/css/main.css
@@ -18,19 +18,30 @@ body a {
 
 body a:hover {
   color: darkorange;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0.5em 4em;
 }
 
 .header_menulogo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header_menulogo_mobile {
@@ -38,6 +49,8 @@ body a:hover {
 }
 
 .header_menulogo_containerlogo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -51,6 +64,8 @@ body a:hover {
 }
 
 .header_navigation_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -69,8 +84,13 @@ body a:hover {
 }
 
 .headercontainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 25em;
   text-align: center;
   background: linear-gradient(135deg, #ffbe00 65%, #ffa000);
@@ -89,9 +109,14 @@ body a:hover {
 }
 
 .features_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 2em 0;
 }
 
@@ -119,15 +144,25 @@ body a:hover {
 .media_container {
   max-width: 1800px;
   margin: auto;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 15em);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (15em)[2];
+      grid-template-rows: repeat(2, 15em);
 }
 
 .media_article {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-color: #1e1e1e;
   border-radius: 1em;
   margin: 0em 1em 1em 0;
@@ -135,19 +170,28 @@ body a:hover {
 
 .media_article img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 0 0 1em 1em;
 }
 
 .media_article_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 0 1.5em;
 }
 
 .media_article_container button {
-  align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   font-family: "Quicksand", sans-serif;
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0);
@@ -160,23 +204,33 @@ body a:hover {
 
 .media_article_container button:hover {
   background-color: darkorange;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .media_games {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1/3;
 }
 
 .media_games img {
   max-width: 100%;
   height: 50%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .media_series {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
   grid-column: 2/4;
+  -ms-grid-row: 2;
   grid-row: 2;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .media_series img {
@@ -185,7 +239,10 @@ body a:hover {
 }
 
 .media_movies, .media_animes {
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .media_movies img, .media_animes img {
@@ -201,6 +258,8 @@ body a:hover {
 }
 
 .news_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -219,10 +278,13 @@ body a:hover {
 .news_wrapper_selector input[type="radio"]:checked + label {
   color: darkorange;
   font-weight: bold;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
 .news #container_0 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -255,7 +317,8 @@ body a:hover {
   width: 100%;
   min-height: 50%;
   max-height: 50%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 1em 1em 0 0;
 }
 
@@ -282,6 +345,8 @@ body a:hover {
 }
 
 .release_selectors_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   max-width: 1800px;
   margin: auto;
@@ -302,6 +367,7 @@ body a:hover {
 .release_selectors_wrapper_input input[type="radio"]:checked + label {
   color: darkorange;
   font-weight: bold;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -316,16 +382,20 @@ body a:hover {
 
 .release_element_imageshadow {
   max-height: 40em;
-  box-shadow: inset 10em 0 30em 4em #141414;
+  -webkit-box-shadow: inset 10em 0 30em 4em #141414;
+          box-shadow: inset 10em 0 30em 4em #141414;
 }
 
 .release_element_imageshadow img {
   position: relative;
   z-index: -2;
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   max-height: 40em;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .release_element_text {
@@ -336,9 +406,14 @@ body a:hover {
 }
 
 .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   background-color: #141414;
   border-top: 0.15em solid #323232;
   padding: 2em 4em;
@@ -352,6 +427,33 @@ body a:hover {
   padding: 0.25em 0;
 }
 
+.footer_element_themes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer_element_themes #dark_theme {
+  font-family: "Quicksand", sans-serif;
+  background-color: #1e1e1e;
+  color: white;
+  cursor: pointer;
+  padding: 0.8em 1em;
+  margin: 0 0.5em 0 0;
+  border: 0.15em solid white;
+  border-radius: 1em;
+}
+
+.footer_element_themes #light_theme {
+  font-family: "Quicksand", sans-serif;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  padding: 0.8em 1em;
+  border: 0.15em solid #1e1e1e;
+  border-radius: 1em;
+}
+
 .footer_fa_social {
   font-size: 1.25em;
   border-radius: 0.3em;
@@ -361,6 +463,7 @@ body a:hover {
 
 .footer_fa_social:hover {
   color: darkorange;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -399,11 +502,16 @@ body a:hover {
     padding: 1em 2em;
   }
   .media_container {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 14em);
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (14em)[3];
+        grid-template-rows: repeat(3, 14em);
   }
   .media_movies {
-    flex-direction: row-reverse;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
   }
   .media_movies img {
     max-width: 40%;
@@ -411,7 +519,10 @@ body a:hover {
     border-radius: 1em 0em 0em 1em;
   }
   .media_series {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
     grid-column: 1/3;
+    -ms-grid-row: 3;
     grid-row: 3;
   }
   .news {
@@ -488,7 +599,8 @@ body a:hover {
   }
   .release_element_imageshadow {
     max-height: 30em;
-    box-shadow: inset 10em 0 20em 1em #141414;
+    -webkit-box-shadow: inset 10em 0 20em 1em #141414;
+            box-shadow: inset 10em 0 20em 1em #141414;
   }
   .release_element_imageshadow img {
     max-height: 30em;
@@ -500,8 +612,10 @@ body a:hover {
 
 @media (max-width: 600px) {
   .media_container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 26em repeat(2, 14em) 26em;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 26em (14em)[2] 26em;
+        grid-template-rows: 26em repeat(2, 14em) 26em;
   }
   .media_article {
     margin: 0 0 1em 0;
@@ -510,26 +624,34 @@ body a:hover {
     padding: 0 1em;
   }
   .media_games {
+    -ms-grid-row: 1;
     grid-row: 1;
   }
   .media_games img {
     max-height: 50%;
   }
   .media_movies {
+    -ms-grid-row: 2;
     grid-row: 2;
   }
   .media_movies img, .media_animes img {
     max-width: 45%;
   }
   .media_series {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-grid-column: 1;
     grid-column: 1;
+    -ms-grid-row: 4;
     grid-row: 4;
   }
   .media_series img {
     height: 50%;
     max-width: 100%;
-    object-position: top;
+    -o-object-position: top;
+       object-position: top;
     border-radius: 0em 0 1em 1em;
   }
 }
