--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,25 @@
+:root {
+  --primaryColor: rgb(30,30,30);
+  --secondaryColor: rgb(20,20,20);
+  --textColor: rgb(255,255,255);
+}
+
+.dark_theme {
+  --primaryColor: rgb(30,30,30);
+  --secondaryColor: rgb(20,20,20);
+  --textColor: rgb(255,255,255);
+}
+
+.light_theme {
+  --primaryColor: rgb(255,255,255);
+  --secondaryColor: rgb(240,240,240);
+  --textColor: rgb(30,30,30);
+}
+
 body {
   font-family: "Quicksand", sans-serif;
-  background-color: #1e1e1e;
-  color: white;
+  background-color: var(--primaryColor);
+  color: var(--textColor);
   margin: 0;
   font-size: 14px;
 }
@@ -13,35 +31,24 @@ body ul {
 
 body a {
   text-decoration: none;
-  color: white;
+  color: var(--textColor);
 }
 
 body a:hover {
   color: darkorange;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   padding: 0.5em 4em;
 }
 
 .header_menulogo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .header_menulogo_mobile {
@@ -49,14 +56,7 @@ body a:hover {
 }
 
 .header_menulogo_containerlogo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-}
-
-.header_menulogo_containerlogo_logo {
-  padding: 0 0.5em 0 0;
-  width: 3em;
 }
 
 .header_menulogo_containerlogo span {
@@ -64,8 +64,6 @@ body a:hover {
 }
 
 .header_navigation_list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -83,14 +81,13 @@ body a:hover {
   padding: 0.5em 2em;
 }
 
+#svglogo_path {
+  fill: var(--textColor);
+}
+
 .headercontainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   height: 25em;
   text-align: center;
   background: linear-gradient(135deg, #ffbe00 65%, #ffa000);
@@ -109,14 +106,9 @@ body a:hover {
 }
 
 .features_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  justify-content: space-between;
+  flex-wrap: wrap;
   margin: 2em 0;
 }
 
@@ -132,7 +124,7 @@ body a:hover {
 }
 
 .media {
-  background-color: #141414;
+  background-color: var(--secondaryColor);
   padding: 2em 4em;
 }
 
@@ -144,58 +136,39 @@ body a:hover {
 .media_container {
   max-width: 1800px;
   margin: auto;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: (15em)[2];
-      grid-template-rows: repeat(2, 15em);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 15em);
 }
 
 .media_article {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  background-color: #1e1e1e;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: var(--primaryColor);
   border-radius: 1em;
   margin: 0em 1em 1em 0;
 }
 
 .media_article img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 0 0 1em 1em;
 }
 
 .media_article_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 0 1.5em;
 }
 
 .media_article_container button {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  align-self: flex-end;
   font-family: "Quicksand", sans-serif;
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0);
-  color: white;
+  color: var(--textColor);
   border: 0.15em solid darkorange;
   border-radius: 1em;
   padding: 0.4em 1em;
@@ -204,33 +177,23 @@ body a:hover {
 
 .media_article_container button:hover {
   background-color: darkorange;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .media_games {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
   grid-row: 1/3;
 }
 
 .media_games img {
   max-width: 100%;
   height: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .media_series {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
   grid-column: 2/4;
-  -ms-grid-row: 2;
   grid-row: 2;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
 
 .media_series img {
@@ -239,10 +202,7 @@ body a:hover {
 }
 
 .media_movies, .media_animes {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
 
 .media_movies img, .media_animes img {
@@ -258,8 +218,6 @@ body a:hover {
 }
 
 .news_wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -278,13 +236,10 @@ body a:hover {
 .news_wrapper_selector input[type="radio"]:checked + label {
   color: darkorange;
   font-weight: bold;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
 .news #container_0 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -307,7 +262,7 @@ body a:hover {
   max-width: 15em;
   min-height: 15em;
   max-height: 20em;
-  background-color: #141414;
+  background-color: var(--secondaryColor);
   border-radius: 1em;
   margin: 2em 2em 0 0;
 }
@@ -317,8 +272,7 @@ body a:hover {
   width: 100%;
   min-height: 50%;
   max-height: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 1em 1em 0 0;
 }
 
@@ -335,7 +289,7 @@ body a:hover {
 }
 
 .release_selectors {
-  background-color: #141414;
+  background-color: var(--secondaryColor);
   padding: 2em 4em;
 }
 
@@ -345,8 +299,6 @@ body a:hover {
 }
 
 .release_selectors_wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   max-width: 1800px;
   margin: auto;
@@ -367,7 +319,6 @@ body a:hover {
 .release_selectors_wrapper_input input[type="radio"]:checked + label {
   color: darkorange;
   font-weight: bold;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -382,20 +333,16 @@ body a:hover {
 
 .release_element_imageshadow {
   max-height: 40em;
-  -webkit-box-shadow: inset 10em 0 30em 4em #141414;
-          box-shadow: inset 10em 0 30em 4em #141414;
+  box-shadow: inset 10em 0 30em 4em #1e1e1e;
 }
 
 .release_element_imageshadow img {
   position: relative;
   z-index: -2;
   width: 100%;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   max-height: 40em;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .release_element_text {
@@ -403,18 +350,14 @@ body a:hover {
   width: 40%;
   left: 5em;
   bottom: 5em;
+  color: white;
 }
 
 .footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  background-color: #141414;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  background-color: var(--secondaryColor);
   border-top: 0.15em solid #323232;
   padding: 2em 4em;
 }
@@ -428,8 +371,6 @@ body a:hover {
 }
 
 .footer_element_themes {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -438,9 +379,9 @@ body a:hover {
   background-color: #1e1e1e;
   color: white;
   cursor: pointer;
-  padding: 0.8em 1em;
+  padding: 0.5em 0.7em;
   margin: 0 0.5em 0 0;
-  border: 0.15em solid white;
+  border: 0.15em solid var(--textColor);
   border-radius: 1em;
 }
 
@@ -449,8 +390,8 @@ body a:hover {
   background-color: white;
   color: black;
   cursor: pointer;
-  padding: 0.8em 1em;
-  border: 0.15em solid #1e1e1e;
+  padding: 0.5em 0.7em;
+  border: 0.15em solid var(--textColor);
   border-radius: 1em;
 }
 
@@ -463,7 +404,6 @@ body a:hover {
 
 .footer_fa_social:hover {
   color: darkorange;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -502,16 +442,11 @@ body a:hover {
     padding: 1em 2em;
   }
   .media_container {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: (14em)[3];
-        grid-template-rows: repeat(3, 14em);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 14em);
   }
   .media_movies {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
+    flex-direction: row-reverse;
   }
   .media_movies img {
     max-width: 40%;
@@ -519,10 +454,7 @@ body a:hover {
     border-radius: 1em 0em 0em 1em;
   }
   .media_series {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
     grid-column: 1/3;
-    -ms-grid-row: 3;
     grid-row: 3;
   }
   .news {
@@ -570,7 +502,7 @@ body a:hover {
     position: absolute;
     left: 0;
     text-align: start;
-    background-color: #141414;
+    background-color: var(--secondaryColor);
     width: calc(100vw - 4em);
     height: 12em;
     border-radius: 0 0 1em 1em;
@@ -599,8 +531,7 @@ body a:hover {
   }
   .release_element_imageshadow {
     max-height: 30em;
-    -webkit-box-shadow: inset 10em 0 20em 1em #141414;
-            box-shadow: inset 10em 0 20em 1em #141414;
+    box-shadow: inset 10em 0 20em 1em #1e1e1e;
   }
   .release_element_imageshadow img {
     max-height: 30em;
@@ -612,10 +543,8 @@ body a:hover {
 
 @media (max-width: 600px) {
   .media_container {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    -ms-grid-rows: 26em (14em)[2] 26em;
-        grid-template-rows: 26em repeat(2, 14em) 26em;
+    grid-template-columns: 1fr;
+    grid-template-rows: 26em repeat(2, 14em) 26em;
   }
   .media_article {
     margin: 0 0 1em 0;
@@ -624,34 +553,26 @@ body a:hover {
     padding: 0 1em;
   }
   .media_games {
-    -ms-grid-row: 1;
     grid-row: 1;
   }
   .media_games img {
     max-height: 50%;
   }
   .media_movies {
-    -ms-grid-row: 2;
     grid-row: 2;
   }
   .media_movies img, .media_animes img {
     max-width: 45%;
   }
   .media_series {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-grid-column: 1;
+    flex-direction: column;
     grid-column: 1;
-    -ms-grid-row: 4;
     grid-row: 4;
   }
   .media_series img {
     height: 50%;
     max-width: 100%;
-    -o-object-position: top;
-       object-position: top;
+    object-position: top;
     border-radius: 0em 0 1em 1em;
   }
 }
