--- a/sass/main.scss
+++ b/sass/main.scss
@@ -44,6 +44,13 @@ body{
             transition: 0.3s;
         }
     }
+    &::-webkit-scrollbar{
+        width: 0.5em;
+    }
+    &::-webkit-scrollbar-thumb {
+        background: $textColor;
+        border-radius: 1em;
+    }
 }
 
 .header{
@@ -244,11 +251,11 @@ body{
         overflow-x:auto;
         overflow-y: hidden;
         &::-webkit-scrollbar{
-            height: 0em;
+            height: 0.5em;
         }
-        
         &::-webkit-scrollbar-thumb {
-            background: $tertiaryDark;
+            background: $textColor;
+            border-radius: 1em;
         }
     }
     &_article{
@@ -258,7 +265,7 @@ body{
         max-height: 20em;
         background-color: $secondaryColor;
         border-radius: 1em;
-        margin: 2em 2em 0 0;
+        margin: 2em 2em 1em 0;
         img{
             max-width: 100%;
             width: 100%;
@@ -519,6 +526,11 @@ body{
     .news{
         label{
             margin: 0 1em 0 0;
+        }
+        &_container{
+            &::-webkit-scrollbar{
+                height: 0em;
+            }
         }
     }
     .release{
