--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -46,3 +46,10 @@
         }
     }
 }
+
+@media (max-width: 1100px){
+    $sectionsPadding: 1em 2em;
+    .footer{
+        padding: $sectionsPadding ;
+    }
+}
