--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -54,3 +54,65 @@
         margin: auto;
     }
 }
+
+@media (max-width: 1100px){
+    .header{
+        padding: 0.5em 2em;
+        &_navigation_list{
+            li{
+                padding: 0 2em;
+            }
+        }
+    }
+    .headercontainer{
+        height: 20em;
+        &_title{
+            width: 45%;
+        }
+    }
+}
+
+@media (max-width: 700px){
+    .header{
+        padding: 0;
+        &_menulogo{
+            &_mobile{
+                display: block;
+                position: relative;
+                padding: 1.5em 0 1.5em 2em;
+                &_menu{
+                    margin: 0 1em 0 0;
+                }
+                &_list{
+                    display: none;
+                }
+                &_show{
+                    display: block;
+                    position: absolute;
+                    left: 0;
+                    text-align: start;
+                    background-color: $secondaryColor;
+                    width: calc(100vw - 4em);
+                    height: 12em;
+                    border-radius: 0 0 1em 1em;
+                    padding: 2em;
+                    li{
+                        padding: 0.4em 0;
+                    }
+                }
+            }
+        }
+        &_navigation{
+            display: none;
+        }
+        &_signin{
+            margin: 0.5em 2em;
+        }
+    }
+    .headercontainer{
+        height: 20em;
+        &_title{
+            width: 70%;
+        }
+    }
+}
