--- a/sass/layouts/_medias.scss
+++ b/sass/layouts/_medias.scss
@@ -86,6 +86,30 @@
     // }
 }
 
+@media (max-width: 1100px){
+    $sectionsPadding: 1em 2em;
+    .media{
+        padding: $sectionsPadding;
+        &_container{
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 14em);
+        }
+        &_movies{
+            flex-direction: row-reverse;
+            img{
+                max-width: 40%;
+                height: 100%;
+                border-radius: 1em 0em 0em 1em;
+                // border-radius: 0em 1em 1em 0em;
+            }
+        }
+        &_series{
+            grid-column: 1/3;
+            grid-row: 3;
+        }
+    }
+}
+
 @media (max-width: 600px){
     .media{
         &_container{
