--- a/sass/layouts/_news.scss
+++ b/sass/layouts/_news.scss
@@ -61,3 +61,26 @@
         }
     }
 }
+
+@media (max-width: 1100px){
+    $sectionsPadding: 1em 2em;
+    .news{
+        padding: $sectionsPadding;
+        &_article{
+            min-width: 13em;
+        }
+    }
+}
+
+@media (max-width: 700px){
+    .news{
+        label{
+            margin: 0 1em 0 0;
+        }
+        &_container{
+            &::-webkit-scrollbar{
+                height: 0em;
+            }
+        }
+    }
+}
